--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -3,35 +3,35 @@
 {% extends "base.html" %}
 
 {% block page_title %}
-    
+    <h1 class = "main-content" style="margin-bottom:2rem;"> all recipes </h1>
 {% endblock page_title %}
 
 <!-- If you edit the below code, you will need to make the same edits in search.html in the food_blog directory -->
 {% block page_content %}
-    <div class = "page_container">
 
-        
+    <div class = "page-container">
+
         <div class = "main-content">
-
-            <h1 class = "gap_below"> all recipes </h1>
+            
             {% for post in posts %}
                 <h2><a href = "{% url 'posts:post_detail' slug=post.slug %}"> {{ post.title }} </a></h2>
                 <em> {{ post.created_on.date }} </em><br><br>
 
-                {% comment %}
                 {% if post.banner %}
                     <figure>
                         <img
                             class = "framed"
                             src = "{{ post.banner.url }}"
                             alt = "{{ post.title }}"
-                            height = "400"
+                            width = "400"
                         />
                     </figure>
+
+                
                     
                 {% endif %}
 
-                {% endcomment %}
+                
                 
                 <br> <br>
             {% endfor %}
@@ -43,8 +43,9 @@
                     <a href="{% url 'posts:post_tag' tag.name %}">
                         <h3> {{ tag.name }} </h3> </a>
             {% endfor %}
-        </div>
-        
+        </div>  
+
+
     </div> 
 
     
