--- a/coffee/templates/coffee/detail.html
+++ b/coffee/templates/coffee/detail.html
@@ -2,12 +2,14 @@
 
 
 {% block page_title %}
-    <h1> {{ coffee.name }} </h1>
+    
 
 {% endblock page_title %}
 
 {% block page_content %}
     <div class="narrow-body">
+
+        <h1> {{ coffee.name }} </h1> <br>
 
         <big> 
 
