--- a/coffee/templates/coffee/origin.html
+++ b/coffee/templates/coffee/origin.html
@@ -1,5 +1,7 @@
 {% extends "coffee/filters.html" %}
 
 {% block page_title %}
-    <h1> Coffees from {{ origin }} </h1>
+    <div style="margin:0 10vw;">
+        <h1> Coffees from {{ origin }} </h1>
+    </div>
 {% endblock page_title %}
