--- a/coffee/templates/coffee/roast_level.html
+++ b/coffee/templates/coffee/roast_level.html
@@ -1,5 +1,7 @@
 {% extends "coffee/filters.html" %}
 
 {% block page_title %}
-    <h1> {{ roast_level }} roasts </h1>
+    <div style="margin:0 10vw;">
+        <h1> {{ roast_level }} roasts </h1>
+    </div>
 {% endblock page_title %}
