--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -4,14 +4,12 @@
 
 
 {% block page_title %}
-    <div class="narrow-body">
-        <h1> {{ post.title }} </h1>
-    </div>
+
 {% endblock page_title %}
 
 {% block page_content %}
     <div class="narrow-body">
-
+        <h1 class = "gap_below"> {{ post.title }} </h1>
     
         {% if post.banner %}
             <div style="text-align: center;">
