--- a/posts/templates/posts/tag.html
+++ b/posts/templates/posts/tag.html
@@ -3,5 +3,5 @@
 {% extends "posts/index.html" %}
 
 {% block page_title %}
-    <h1> {{ tag }} </h1>
+    <h1 class = "main-content" style="margin-bottom:2rem;"> {{ tag }} </h1>
 {% endblock page_title %}
