--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"> 
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>  lemonhead  </title>
     
