--- a/templates/search.html
+++ b/templates/search.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
 {% block page_title %}
-    <h1> Search for <em>{{ query }}</em> </h1>
+    
 {% endblock page_title %}
 
 {% block page_content %}
-    <div class = "main-content" , style = "margin-left:20vw">
+    <div class = "narrow-body">
+        <h1 class = "gap_below"> Search for <em>{{ query }}</em> </h1>
+
         <h2> Recipes </h2> <br>
         {% for post in posts %}
                 <h3><a href = "{% url 'posts:post_detail' slug=post.slug %}"> {{ post.title }} </a></h3>
