--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,8 @@
- 
+/* This code sets the base for the rem unit. 1rem = 16 pixels, I think. */
+html {
+    font-size: 100%; /* This defaults to 16px on most browsers. 1rem = 16px */
+} 
+
 *{
     margin:0;
     padding: 0;
@@ -46,8 +50,8 @@ h3{
     padding: auto;
     line-height: 1.5;
     font-weight: 500;
-    margin-bottom: 2vh;
-    font-size: 1.6vw;
+    margin: 1rem 0;
+    font-size: 1.3rem;
 }
 
 p {
