making photos a little bigger

--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -23,7 +23,7 @@
                             class = "framed"
                             src = "{{ post.banner.url }}"
                             alt = "{{ post.title }}"
-                            width = "400"
+                            style = "max-width: 500px; max-height: 500px; text-align: center;"
                         />
                     </figure>
 
