--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -50,6 +50,28 @@
             {% endif %}
         </footer>
 
+            <h3>Leave a comment:</h3>
+            <form method="post">
+                {% csrf_token %}
+                <div>
+                    {{ form.author }}
+                </div>
+                <div>
+                    {{ form.body }}
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+
+            <h3>Comments:</h3>
+            {% for comment in comments %}
+                <p>
+                    On {{ comment.created_on.date }} <b>{{ comment.author }}</b> wrote:
+                </p>
+                <p>
+                    {{ comment.body | linebreaks }}
+                </p>
+            {% endfor %}
+
     </div>
     
 {% endblock page_content %}
