--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -59,18 +59,20 @@
                 <div>
                     {{ form.body }}
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary {% if not comments %}gap_below{% endif %}">Submit</button>
             </form>
 
-            <h3>Comments:</h3>
-            {% for comment in comments %}
-                <p>
-                    On {{ comment.created_on.date }} <b>{{ comment.author }}</b> wrote:
-                </p>
-                <p>
-                    {{ comment.body | linebreaks }}
-                </p>
-            {% endfor %}
+            {% if comments %}
+                <h3>Comments:</h3>
+                {% for comment in comments %}
+                    <p>
+                        On {{ comment.created_on.date }} <b>{{ comment.author }}</b> wrote:
+                    </p>
+                    <p {% if forloop.last %} class = "gap_below" {% endif %}>
+                        {{ comment.body }}
+                    </p>
+                {% endfor %}
+            {% endif %}
 
     </div>
     
