--- a/static/css/style.css
+++ b/static/css/style.css
@@ -251,3 +251,39 @@ img.framed {
     }
 }
 
+/* adding stuff from deep seek to make comment form look better ? */
+
+.comment-author {
+    /* Specific styles for author field */
+    /* border: 2px solid red; */
+    width: 30rem;
+    margin: .5rem;
+    padding: .5rem;
+    font-size: 1rem;
+    font-family: sans-serif;
+}
+
+.comment-body {
+    /* Specific styles for body field */
+    width: 30rem;
+    margin: .5rem;
+    padding: .5rem;
+    font-size: .9rem;
+    font-family: sans-serif;
+    /* min-height: 150px; */
+    /* line-height: 1.6; */
+    /* border: 2px solid red; */
+}
+
+.btn.btn-primary {
+    background-color: rgb(255, 242, 175);
+    color: rgb(73, 61, 158);
+    padding: .5rem 1rem;
+    border-radius: 0.375rem;
+    font-family: sans-serif;
+    font-size: 1.25rem;
+    /* font-weight: 500; */
+    cursor: pointer;
+    /* transition: all 0.15s ease-in-out; */
+    margin: 0.5rem;
+}
