--- a/coffee/templates/coffee/processing.html
+++ b/coffee/templates/coffee/processing.html
@@ -1,5 +1,7 @@
 {% extends "coffee/filters.html" %}
 
 {% block page_title %}
-    <h1>coffees with {{ processing }} processing </h1>
+    <div style="margin:0 10vw;">
+        <h1>coffees with {{ processing }} processing </h1>
+    </div>
 {% endblock page_title %}
