fixing filters.html, rich text font added but not entirely working as it should

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -35,7 +35,7 @@
             </em>
         </h3>
 
-        <p>{{ post.body | linebreaks }}</p>
+        <p>{{ post.body|safe | linebreaks }}</p>
 
 
         <footer>
