--- a/coffee/templates/coffee/filters.html
+++ b/coffee/templates/coffee/filters.html
@@ -3,7 +3,7 @@
 {% block page_content %}
     <div class = "coffee-main", style="margin-left: 20vw;">
         {% for coffee in coffees %}
-            <h2><a href = "{% url 'coffee:coffee_detail' coffee.pk %}">{{ coffee.name }}</a> </h2>
+            <h2><a href = "{% url 'coffee:coffee_detail' slug=coffee.slug %}">{{ coffee.name }}</a> </h2>
             <p> 
                 Roaster: <a href = "{% url 'coffee:coffee_roaster' coffee.roaster.name %}">
                         {{ coffee.roaster }} </a> <br>
