--- a/templates/base.html
+++ b/templates/base.html
@@ -1,46 +1,44 @@
 <!-- templates/base.html -->
 
-<!DOCTYPE html>
+<!doctype html>
 {% load static %}
 <html lang="en">
+  <!-- Below is a link to some style sheet from bootstrap. For now, I'm going without bootstrap. -->
+  <!-- <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/flatly/bootstrap.min.css"> -->
 
-<!-- Below is a link to some style sheet from bootstrap. For now, I'm going without bootstrap. -->
-<!-- <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/flatly/bootstrap.min.css"> -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>lemonhead</title>
 
-<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"> 
+    <link
+      href="{% static 'css/style.css' %}"
+      rel="stylesheet"
+      type="text/css"
+    />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>  lemonhead  </title>
-    
     <!-- can include a java script here -->
-</head>
+  </head>
 
-<header class = "site-header">
+  <header class="site-header">
     <div class="header-search">
-        <form action="{% url 'site_search' %}" method="get">
-                <input name="search_entry" type="text" placeholder="Search site...">
-        </form>
-    </div> 
+      <form action="{% url 'site_search' %}" method="get">
+        <input name="search_entry" type="text" placeholder="Search site..." />
+      </form>
+    </div>
 
-    <h1 class="site-title"> lemonhead </h1>
+    <h1 class="site-title">lemonhead</h1>
     <nav class="header-links">
-        <a href="{% url 'posts:post_index' %}" class = "header-link">food</a>
-        <a href="{% url 'coffee:coffee_index' %}" class = "header-link">coffee</a>
+      <a href="{% url 'posts:post_index' %}" class="header-link">food</a>
+      <a href="{% url 'coffee:coffee_index' %}" class="header-link">coffee</a>
     </nav>
-</header> 
+  </header>
 
-<body>
-
+  <body>
     {% block page_title %}
     <!-- This is where the title of each child template page goes -->
-    {% endblock page_title %}
-    
-    {% block page_content %}
+    {% endblock page_title %} {% block page_content %}
     <!-- Content from child templates goes here -->
     {% endblock page_content %}
-
-    
-</body>
+  </body>
 </html>
