--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,6 @@
 <!doctype html>
 {% load static %}
 <html lang="en">
-  <!-- Below is a link to some style sheet from bootstrap. For now, I'm going without bootstrap. -->
-  <!-- <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/flatly/bootstrap.min.css"> -->
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,27 +15,31 @@
     />
 
     <!-- can include a java script here -->
+    <!-- Below is a link to some style sheet from bootstrap. For now, I'm going without bootstrap. -->
+    <!-- <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/flatly/bootstrap.min.css"> -->
   </head>
 
-  <header class="site-header">
-    <div class="header-search">
-      <form action="{% url 'site_search' %}" method="get">
-        <input name="search_entry" type="text" placeholder="Search site..." />
-      </form>
-    </div>
-
-    <h1 class="site-title">lemonhead</h1>
-    <nav class="header-links">
-      <a href="{% url 'posts:post_index' %}" class="header-link">food</a>
-      <a href="{% url 'coffee:coffee_index' %}" class="header-link">coffee</a>
-    </nav>
-  </header>
-
   <body>
-    {% block page_title %}
-    <!-- This is where the title of each child template page goes -->
-    {% endblock page_title %} {% block page_content %}
-    <!-- Content from child templates goes here -->
-    {% endblock page_content %}
+    <header class="site-header">
+      <div class="header-search">
+        <form action="{% url 'site_search' %}" method="get">
+          <input name="search_entry" type="text" placeholder="Search site..." />
+        </form>
+      </div>
+
+      <h1 class="site-title">lemonhead</h1>
+      <nav class="header-links">
+        <a href="{% url 'posts:post_index' %}" class="header-link">food</a>
+        <a href="{% url 'coffee:coffee_index' %}" class="header-link">coffee</a>
+      </nav>
+    </header>
+
+    <div class="container">
+      {% block page_title %}
+      <!-- This is where the title of each child template page goes -->
+      {% endblock page_title %} {% block page_content %}
+      <!-- Content from child templates goes here -->
+      {% endblock page_content %}
+    </div>
   </body>
 </html>
